2019-03-12 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2854.c,
	  support/regression/tests/gcc-torture-execute-arith-rand-ll.c:
	  Disable some tests for pdk14 (on which they won't work anytime soon due to lack of memory).
	* support/regression/tests/gcc-torture-execute-divcmp-2.c,
	  support/regression/tests/staticinit.c:
	  Disable two tests that fail in annoying ways.
	* src/SDCCglue.c:
	  Pointer initialization fix.
	* src/pdk/gen.c:
	  Shift fix.

2019-03-12 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/collate-results.py:
	  Improve error handling in regression test result parsing, fix bug #2675.

2019-03-11 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/aspdk14/pdk14mch.c,
	  sdas/asxxsrc/asdata.c,
	  sdas/asxxsrc/asexpr.c,
	  sdas/asxxsrc/asxxxx.h:
	  Fix handling of offsets to word addresses, patch by Nicolas Lesser.
	* src/pdk/gen.c:
	  Remove workarounds for word address offset handling issue.
	* support/regression/tests/*:
	  Disable some tests for pdk14 (on which they won't work anytime soon due to lack of memory).

2019-03-11 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Codegen fixes.
	* sim/ucsim/pdk.src/pdk.cc,
	  sdas/linksrc/lkmain.c:
	  Memory limit diagnostics, patch by Nicolas Lesser.
	* support/regression/tests/bug-2208.c,
	  support/regression/tests/bug-2253.c,
	  support/regression/tests/bug-2357.c,
	  support/regression/tests/bug-2516.c,
	  support/regression/tests/bug-2625.c,
	  support/regression/tests/bug-2254.c,
	  support/regression/tests/bug-2403.c,
	  support/regression/tests/bug-2516.c,
	  support/regression/tests/bug-2820.c:
	  Disable some tests for pdk14 (on which they won't work anytime soon due to lack of memory).

2019-03-11 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  src/SDCCglue.c:
	  Pointer handling fixes.
	* support/regression/tests/bp.c,
	  support/regression/tests/bug-1805702.c: