@@ -4,12 +4,16 @@
 	  support/regression/tests/gcc-torture-execute-arith-rand-ll.c:
 	  Disable some tests for pdk14 (on which they won't work anytime soon due to lack of memory).
 	* support/regression/tests/gcc-torture-execute-divcmp-2.c,
-	  support/regression/tests/staticinit.c:
+	  support/regression/tests/staticinit.c,
+	  support/regression/tests/bug-2222.c,
+	  support/regression/tests/bug-2231.c:
 	  Disable two tests that fail in annoying ways.
 	* src/SDCCglue.c:
 	  Pointer initialization fix.
 	* src/pdk/gen.c:
-	  Shift fix.
+	  Shift fix, pointer read fix.
+	* src/pdk/ralloc2.cc:
+	  Improve register use at pointer read.
 
 2019-03-12 Philipp Klaus Krause <pkk AT spth.de>
 
